# SimpleGeometry

./: CMakeLists.txt  README.org  conanfile.py  simple_geometry.h
test/: test.c
test-render-sdl-gl/: CMakeLists.txt  GenerateGeometries.hpp  Random.hpp  Shader.hpp  normal.vert  test.cpp
test-render-sdl-gl/shaders/: normal.frag  phong.frag  phong.vert
test-render-sdl-gl/utils/: Random.hpp  Shader.hpp
test/blockcopy/: CMakeLists.txt  test.c
test/conan_package/: CMakeLists.txt  conanfile.txt  test.cpp
test/phong-test-render/: GenerateGeometries.hpp  Renderers.hpp  test.cpp
test/phong-test-render/shaders/: solidcolor.frag  solidcolor.vert
test/phong-test-render/utils/: DeltaClock.hpp  Error.hpp  OrbitCamera.hpp
test/viewer/: CMakeLists.txt  Geometry.hpp  Renderers.hpp  test.cpp
test/viewer/shaders/: normal.vert  phong.frag
test/viewer/utils/: Shader.hpp
